app/glpi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glpi-helpdesk
  labels:
    app: glpi-helpdesk
  namespace: helpdesk
spec:
  selector:
    matchLabels:
      app: glpi-helpdesk
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: glpi-helpdesk
    spec:
      containers:
        - name: glpi-helpdesk
          image: diouxx/glpi:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: glpi-pvc
              mountPath: /var/www/html
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: glpi-pvc
          persistentVolumeClaim:
            claimName: glpi-pvc
