app/glpi/mysql-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-glpi
  labels:
    app: mysql-glpi
  namespace: helpdesk
spec:
  selector:
    matchLabels:
      app: mysql-glpi
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-glpi
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-pvc
              mountPath: /var/lib/mysql-glpi
          readinessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - -h
                - localhost
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: mysql-pvc
          persistentVolumeClaim:
            claimName: mysql-pvc
---
