app/glpi/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-glpi-svc
  labels:
    app: mysql-glpi
  namespace: helpdesk
spec:
  ports:
    - port: 3306
  selector:
    app: mysql-glpi
  clusterIP: None
