app/glpi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helpdesk-ingress
  namespace: helpdesk
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - tma.amoaman.com
    secretName: glpi-tls-cert
  rules:
  - host: tma.amoaman.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helpdesk-svc
            port:
              number: 80
